# gender-classification

./: .gitignore  README.md  SVM_PCA.xml  build.sh  test  test.cpp  train
ignore/: DisplayImage.cpp  SVM_PCA_old_400_p81.xml  genList.sh  rename.sh
src/: CMakeLists.txt  CameraGenderRecognition.cpp  myGabor.cpp  myGabor.h  pcaImpl.cpp  pcaImpl.h  testMain.cpp  trMain.cpp  utils.cpp  utils.h
test/: Makefile  main.cpp  run.sh
